# rankstuff

./: .gitignore  LICENSE  README.md  main.py
api/: .env.example  __init__.py  dependencies.py  main.py  pyproject.toml
api/core/: __init__.py  config.py  database.py  security.py
api/models/: __init__.py  auth.py  charts.py  polls.py
api/repositories/: __init__.py  base.py  chart_repository.py  poll_repository.py  user_repository.py
api/routers/: __init__.py  auth_router.py  chart_router.py  poll_router.py
api/services/: __init__.py  auth_service.py  chart_service.py  poll_service.py
api/tests/: conftest.py  test_auth.py  test_polls.py
deploy/: nginx.conf  rankstuff-api.service
front/: angular.json  package-lock.json  package.json
front/src/: index.html  styles.css
front/src/app/: app.routes.ts  app.ts
front/src/app/components/: dashboard.component.ts  history.component.ts  layout.component.ts  login.component.ts  polls.component.ts  reports.component.ts  summary.component.ts  vote.component.ts
front/src/app/guards/: auth.guard.ts
front/src/app/interceptors/: auth.interceptor.ts
front/src/app/services/: auth.service.ts  chart.service.ts  poll.service.ts  theme.service.ts
front/src/environments/: environment.prod.ts
